<resources>
    <string name="app_name">WhatDidILearn</string>
    <string name="novo_item">novo item</string>
    <string name="Salvar">Salvar</string>
    <string name="item_description">Item Description</string>
    <string name="item_title">Item title</string>
    <string name="edit_text_title">Item name</string>
    <string name="edit_text_description">small description</string>
    <string name="botao_de_deletar">botão de deletar</string>
    <string name="nivel_de_entendimento"><b>Nível de entendimento</b></string>
    <string name="medio">Médio</string>
    <string name="baixo">Baixo</string>
    <string name="alto">Alto :)</string>
</resources>