<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewLearnedItem">

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/item_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Item Title" />

    <EditText
        android:id="@+id/editTextTitle"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/edit_text_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemTitle" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/item_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTitle"
        tools:text="Item Description" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_margin="20dp"
        android:ems="10"
        android:hint="@string/edit_text_description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDescription" />

    <Button
        android:id="@+id/buttonSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Salvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_Medium" />

    <RadioButton
        android:id="@+id/radioButton_High"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alto"
        android:textColorHighlight="@color/hard_pink"
        android:textColorLink="@color/hard_pink"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton_Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton_Medium" />

    <RadioButton
        android:id="@+id/radioButton_Low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/baixo"
        android:textColorLink="@color/hard_pink"
        app:layout_constraintEnd_toStartOf="@+id/radioButton_Medium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nivel_entendimento" />

    <RadioButton
        android:id="@+id/radioButton_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medio"
        android:textColorLink="@color/hard_pink"
        app:layout_constraintBottom_toBottomOf="@+id/radioButton_Low"
        app:layout_constraintEnd_toStartOf="@+id/radioButton_High"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/radioButton_Low" />

    <TextView
        android:id="@+id/nivel_entendimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/nivel_de_entendimento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>